--- a/Braille APP/Braille APP.csproj
+++ b/Braille APP/Braille APP.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tradução Braille.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tradução Braille.Designer.cs">
+      <DependentUpon>Tradução Braille.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Braille.resx">
       <DependentUpon>Braille.cs</DependentUpon>
     </EmbeddedResource>
@@ -66,6 +72,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Tradução Braille.resx">
+      <DependentUpon>Tradução Braille.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
